PixelWalker copy bot changelog

2026-01-19 Version 1.18.0
- Bot: Added command ".snake [off | on time offset hideclock]" - placing blue coins automatically increments time door offset".

2026-01-17 Version 1.17.4
- Bot: Reduced amount of time it takes to place large quantities of blocks.

2026-01-03 Version 1.17.3
- Website: Fix portal id and target id not showing properly in portal list page.
- Bot: Wrap offset argument for time door blocks when using .smartpaste command.

2025-12-29 Version 1.17.2
- Website: Update PW <-> EELVL differences.

2025-12-25 Version 1.17.1
- Website: When importing EELVL/EER worlds, Label and NPC text is now put into signs.

2025-12-25 Version 1.17.0
- Bot: Updated to work with PixelWalker version 2025.12.1

2025-12-19 Version 1.16.2
- Website: Fixed an issue with EELVL/EER import where saving such imported world, that had world background, would cause PW server crash.

2025-12-15 Version 1.16.1
- Website: Fixed an issue where importing untitled (unsaved) EER world was giving unexpected errors.

2025-11-28 Version 1.16.0
- Bot: .smartpaste now applies colour wise smart pasting logic for hex colour background blocks.
  - For ex.: { r: 0x2, g: 0x0f, b: 0xb5 }, { r: 0x4, g: 0x1f, b: 0xb4 } -> { r: 0x6, g: 0x2f, b: 0xb3 }.

2025-11-26 Version 1.15.0
- Website: Add portal list page.

2025-11-16 Version 1.14.1
- Bot: Removed .mask command 'nonair' parameter.
- Bot: Added .skipair command as replacement for .mask 'nonair' mode.

2025-11-14 Version 1.14.0
- Website: MIDI Import now supports guitar notes.
- Website: MIDI Import now maps unknown MIDI family instruments to piano notes.

2025-11-13 Version 1.13.0
- Website: MIDI Import now supports drum notes.

2025-11-10 Version 1.12.3
- Website: Fix bad drum note mapping for EELVL Import/Export.

2025-11-09 Version 1.12.2
- Website: Remove "Optimize colors for faster placement" option from PNG Import.

2025-11-08 Version 1.12.1